# browserballad

./: .gitignore  docker-compose.yml
competition/: .dockerignore  Dockerfile  agent_runner.py  llm.py  pyproject.toml  race_manager.py  script.py  server.py
competition/tests/: test_race_flow.py
findemail/: getemail.py  signup.py
web/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx  textarea.tsx
