[project]
name = "competition-backend"
version = "0.1.0"
description = "Competition backend service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "browser-use",
  "browser-use-sdk",
  "python-dotenv>=1.0",
  "openai>=1.40",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[tool.uv]
package = false
